--- a/src/TensorFlowNET.Examples/TensorFlowNET.Examples.csproj
+++ b/src/TensorFlowNET.Examples/TensorFlowNET.Examples.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
@@ -26,7 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\TensorFlow.NET\src\TensorFlowNET.Hub\TensorFlowNET.Hub.csproj" />
-    <ProjectReference Include="..\..\..\TensorFlow.NET\src\TensorFlowNET.Models\TensorFlowNET.Models.csproj" />
+    <ProjectReference Include="..\..\..\..\TensorFlow.NET\src\TensorFlowNET.Core\TensorFlowNET.Core.csproj" />
+    <ProjectReference Include="..\..\..\..\TensorFlow.NET\src\TensorFlowNET.Hub\TensorFlowNET.Hub.csproj" />
+    <ProjectReference Include="..\..\..\..\TensorFlow.NET\src\TensorFlowNET.Models\TensorFlowNET.Models.csproj" />
   </ItemGroup>
 </Project>
