--- a/src/TensorFlowNET.Examples/TensorFlowNET.Examples.csproj
+++ b/src/TensorFlowNET.Examples/TensorFlowNET.Examples.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="OpenCvSharp4.Windows" Version="4.1.1.20191017" />
     <PackageReference Include="SciSharp.TensorFlow.Redist" Version="1.14.1" />
+    <PackageReference Include="SciSharp.TensorFlow.Redist-Windows-GPU" Version="1.14.0" />
     <PackageReference Include="SharpZipLib" Version="1.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
     <PackageReference Include="TensorFlow.NET" Version="0.11.8" />
